# 001-rcli

./: .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  rustfmt.toml  test.rest
fixtures/: blake3.txt  ed25519.pk  ed25519.sk
read_me/: git.md
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
