[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"   # 添加这一行
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Qfish007 <506175003@qq.com>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.33"
zxcvbn = "3.1.0"
# toml = "0.9.10"
# yaml = "0.3.0"
