[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"                                   # 添加这一行
description = "A command line interface for Rust"
repository = "https://github.com/Qfish007/rcli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Qfish007 <506175003@qq.com>"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
# ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.33"
zxcvbn = "3.1.0"
tokio = { version = "1.36.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
] }
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
tracing = "0.1.40"
axum = { version = "0.7.4", features = ["http2", "query", "tracing"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
enum_dispatch = "0.3.12"
# toml = "0.9.10"
# yaml = "0.3.0"
